# kb-static

./: .gitignore  README.md  build.xml  fetch_data.sh  kb-static.xpr  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
html/css/: style.css
html/js/: make_map_and_table.js  map_table_cfg.js  search.js
html/js/charts/: bar-charts.js  bibl-by-author.js  bibl-by-year.js
html/tabulator-js/: config.js
pyscripts/: add_categories.py  bibl_to_the_people.py  config.py  make_charts_data.py  make_network.py  make_ts_index.py  next_prev.py  process.py  split_to_files.py  utils.py
shellscripts/: dl_imprint.sh  process_data.sh
src/: charts.ts  network.ts
src/data/: network.json
xslt/: 404.xsl  beacon.xsl  charts.xsl  editions.xsl  index.xsl  listbibl.xsl  listorg.xsl  listperson.xsl  listplace.xsl  meta.xsl  network.xsl  search.xsl  toc.xsl
xslt/partials/: blockquote.xsl  entities.xsl  html_footer.xsl  html_navbar.xsl  params.xsl  ref.xsl  tabulator_js.xsl
