[project]
name = "kb-static"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "acdh-tei-pyutils>=2.3.0",
    "jinja2>=3.1.6",
    "pandas>=2.3.3",
    "typesense>=1.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.5",
]
